# spacex_graphql_server

./: .gitignore  Cargo.toml  README.md
migrations/2021-05-09-133503_roadster_info/: up.sql
migrations/2021-05-23-142802_company_info/: down.sql  up.sql
migrations/2021-06-22-212339_capsules/: up.sql
migrations/2021-06-28-212148_capsules/: down.sql  up.sql
migrations/2021-06-28-213842_company_info/: up.sql
migrations/2021-06-28-214249_roadster_info/: down.sql  up.sql
migrations/2021-06-28-220039_cores/: down.sql  up.sql
migrations/2021-06-29-201752_crew/: down.sql  up.sql
migrations/2021-07-03-160242_dragons/: down.sql  up.sql
migrations/2021-07-03-162719_dragons_heat_shield/: up.sql
migrations/2021-07-03-164103_dragons_pressurized_capsule/: down.sql  up.sql
migrations/2021-07-03-165354_dragons_trunk/: up.sql
migrations/2021-07-03-170233_dragons_thrusters/: down.sql  up.sql
migrations/2021-07-04-125343_dragons_heat_shield/: down.sql  up.sql
migrations/2021-07-04-125645_dragons_pressurized_capsule/: up.sql
migrations/2021-07-04-130038_dragons_trunk/: down.sql  up.sql
migrations/2021-07-04-131537_dragons_thrusters/: up.sql
migrations/2021-07-04-135831_history/: up.sql
migrations/2021-07-04-145810_landpads/: down.sql  up.sql
migrations/2021-07-04-202016_launches/: down.sql  up.sql
migrations/2021-07-04-202401_launch_failures/: down.sql  up.sql
migrations/2021-07-04-202515_launch_fairings/: down.sql  up.sql
src/: launches.rs  lib.rs  main.rs  operations.rs  queryspacex.rs
src/database/: db.rs  mod.rs  (+3 more)
static/: welcome.html
(+25 files in other folders)
